  quick check if the target document already exists, and then branch to either
  insert or replace internally.

* fixed some escaping issues within the web UI

* fix supervision's failed server handling to transactionally create
  all failed leader/followers along

* agents need to be able to overwrite a compacted state with same _key

v3.3.22 (2019-02-01)
--------------------

* data masking: better documentation, fixed default phone number,
  changed default range to -100 and 100 for integer masking function

* added configurable masking of dumped data via `arangodump` tool to obfuscate exported sensible data

* updated velocypack library

* fix broken validation of tick range in arangodump

* upgraded arangodb starter version to 0.14.0

* upgraded arangosync version to 0.6.2

* fixed an issue where a crashed coordinator can lead to some Foxx queue jobs
  erroneously either left hanging or being restarted

* fix issue #7900: Bind values of `null` are not replaced by
  empty string anymore, when toggling between json and table
  view in the web-ui.

* Use base64url to encode and decode JWT parts.

* added AQL function `CHECK_DOCUMENT` for document validity checks

* added arangorestore option `--cleanup-duplicate-attributes` to clean up input documents
  with redundant attribute names

  Importing such documents without the option set will make arangorestore fail with an
  error, and setting the option will make the restore process clean up the input by using
  just the first specified value for each redundant attribute.

* the arangorestore options `--default-number-of-shards` and `--default-replication-factor`
  are now deprecated in favor of the much more powerful options `--number-of-shards`
  and `--replication-factor`

  The new options `--number-of-shards` and `--replication-factor` allow specifying
  default values for the number of shards and the replication factor, resp. for all