@@ -27,6 +27,12 @@ v3.3.23 (XXXX-XX-XX)
 
 * agents need to be able to overwrite a compacted state with same _key
 
+* in case of resigned leader, set isReady=false in clusterInventory
+
+* abort RemoveFollower job if not enough in-sync followers or leader failure
+
+* fix shrinkCluster for satellite collections
+
 v3.3.22 (2019-02-01)
 --------------------
 
